# kl-dfs

./: Cargo.toml  README.md  build.rs
.VSCodeCounter/2023-11-28_22-25-17/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
protocols/: basic.proto  client.proto  datanode.proto  namenode.proto  node.proto
src/: block.rs  client.rs  datanode.rs  main.rs  main_client.rs
src/client/: client.rs
src/config/: config.rs  mod.rs
src/datanode/: datanode.rs  mod.rs  server.rs  storage.rs  writer.rs
src/dfs_client/: dfs_client.rs  mod.rs
src/mains/: client.rs
src/namenode/: block_records.rs  mod.rs  namenode.rs  records.rs  server.rs
