[package]
name = "cis1905"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
tonic-build = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.3"