[package]
name = "kldfs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
tonic-build = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.3"
